Resloving the merge conflict and fixs for broken test